feat: implement reading archives function, and string processing

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -44,7 +44,8 @@
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "typeinfo": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "fstream": "cpp"
     },
     "terminal.integrated.profiles.windows": {
         "MSYS2 MinGW64": {
